# skill-engine

./: .env.example  .gitignore  AGENTS.md  README.md  bkl.example.yaml  pyproject.toml
bkl_engine/: __init__.py  engine.py
bkl_engine/agents/: __init__.py  actions.py  loop.py  resolver.py  router.py  scene_mapping.py  schemas.py
bkl_engine/api/: __init__.py  main.py  routes_runs.py  routes_skills.py  routes_tools.py
bkl_engine/application/: __init__.py  ports.py
bkl_engine/cli/: __init__.py  main.py  run_commands.py  skill_commands.py  tool_commands.py
bkl_engine/core/: __init__.py  config.py  errors.py  schemas.py
bkl_engine/domain/: __init__.py  common.py
bkl_engine/infrastructure/: __init__.py
bkl_engine/interfaces/: __init__.py
bkl_engine/models/: __init__.py  router.py
bkl_engine/policy/: __init__.py  policy_engine.py
bkl_engine/skills/: __init__.py  loader.py  prompt.py  registry.py  runtime.py
bkl_engine/storage/: models.py  (+5 more)
doc/: BKL_Agent_Runtime_Engineering.md  BKL_Business_Agent_Base_Architecture.md  BKL_Business_Agent_Base_Roadmap.md  BKL_Core_Engine_Installation_Forms.md  BKL_Development_Checklist.md  BKL_Project_Structure.md  BKL_Skill_Engine_TECH_SPEC.md  BKL_Skill_Run_Request_and_Routing.md
tests/: test_agent_runtime.py  test_api_cli.py  test_application_framework.py  test_architecture_layers.py  test_catalog_store.py  test_cli.py  test_model_config.py  test_model_providers.py  test_openapi_importer.py  test_python_tool_runner.py  test_registries.py  test_skill_loader.py  test_skill_runtime.py  test_stores.py  test_tool_loader.py
(+99 files in other folders)
