[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bkl-skill-engine"
version = "0.1.0"
description = "Reusable Python Skill Engine for BKL AI products."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "rich>=13.7",
    "SQLAlchemy>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
    "types-jsonschema>=4.22",
    "types-PyYAML>=6.0",
]

[project.scripts]
bkl = "bkl_engine.cli.main:app"

[tool.setuptools.packages.find]
include = ["bkl_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["bkl_engine"]
strict = true
warn_unreachable = true
